# TensorGraph

./: .gitignore  CMakeLists.txt  README.md  config.json
cmakeModules/: FindTensorFlow.cmake
src/: main.cc  mainloop.cc  mainloop.h  structures.h  tensorgraph.cc  tensorgraph.h
